--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,6 +8,11 @@
 </head>
 <body>
 
+<% if alert || notice %>
+  <div class="notice"><%= notice %></div>
+  <div class="alert"><%= alert %></div>
+<% end %>
+
 <%= yield %>
 
 </body>
