enforce the user is logged in before viewing the main house page

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,7 +11,7 @@
 
 <nav class="top-bar">
   <ul class="title-area">
-    <li class="name">LiveTogether</li>
+    <li class="name"><h1><a href="/">LiveTogether</a></h1></li>
     <li class="toggle-topbar"><a href>Menu</a></li>
   </ul>
   <section class="top-bar-section">
