--- a/app/views/houses/show.html.erb
+++ b/app/views/houses/show.html.erb
@@ -1,4 +1,4 @@
 <div class="large-12 columns">
   <h1>Welcome to the app!</h1>
-  <p>This is the main house page</p>
+  <p>This is the main house page for: <%= @house.name %> at address: <%= @house.address %></p>
 </div>
