--- a/app/views/chores/index.html.erb
+++ b/app/views/chores/index.html.erb
@@ -1,7 +1,7 @@
 <h1>Chore List</h1>
 <ul>
 <% @chores.each do |chore| %>
-  <li><%= chore.title %></li>
+  <li><%= link_to chore.title, chore_path(chore) %></li>
 <% end %>
 </ul>
 
