fix stupid bug in the view for showing invitations

--- a/app/views/houses/new.html.erb
+++ b/app/views/houses/new.html.erb
@@ -19,7 +19,7 @@
   <%= f.submit "Create house" %>
 <% end %>
 
-<% if @invitations.any? %>
+<% if @invitations %>
   <div class="large-12 columns">
     <h3>Your invitations</h3>
     <ul>
