add radio buttons and views for displaying the due date of a chore

--- a/app/views/chores/_form.html.erb
+++ b/app/views/chores/_form.html.erb
@@ -16,7 +16,14 @@
     <%= f.label :title %><br>
     <%= f.text_field :title %><br>
     <%= f.label :frequency %><br>
-    <%= f.text_area :frequency %><br>
+    <%= f.label :frequency, "Daily", value: 1 %>
+    <%= f.radio_button :frequency, 1, checked: true %>
+    <%= f.label :frequency, "Weekly", value: 7 %>
+    <%= f.radio_button :frequency, 7 %>
+    <%= f.label :frequency, "Bi-weekly", value: 14 %>
+    <%= f.radio_button :frequency, 14 %>
+    <%= f.label :frequency, "Monthly", value: 30 %>
+    <%= f.radio_button :frequency, 30 %><br>
 
     <%= f.submit %>
 
