change last_completed to date, and implement the complete route and controller action

--- a/app/views/chores/index.html.erb
+++ b/app/views/chores/index.html.erb
@@ -6,7 +6,10 @@
     <br>
     Due date: <%= chore.due_date %>
     <br>
-    <a href>Complete!</a>
+    <%= form_for chore do |f| %>
+      <%= f.hidden_field :last_completed, value: Date.today %>
+      <%= f.submit "Complete!" %>
+    <% end %>
 
   </li>
 <% end %>
