add the ability to assign points to the chore form, as well as display the points on the chore index

--- a/app/views/chores/_form.html.erb
+++ b/app/views/chores/_form.html.erb
@@ -2,7 +2,7 @@
 
   <% if @chore.errors.any? %>
     <div>
-      <h2><%= pluralize(@chore.errors.count, 'error') %> prevented the from from being saved..</h2>
+      <h2><%= pluralize(@chore.errors.count, 'error') %> prevented the form from being saved..</h2>
       <ul>
       <% @chore.errors.full_messages.each do |error_msg| %>
         <li><%= error_msg %></li>
@@ -24,6 +24,8 @@
     <%= f.radio_button :frequency, 14 %>
     <%= f.label :frequency, "Monthly", value: 30 %>
     <%= f.radio_button :frequency, 30 %><br>
+    <%= f.label :points %>
+    <%= f.number_field :points %>
 
     <%= f.submit %>
 
