--- a/app/views/user_mailer/welcome_email.text.erb
+++ b/app/views/user_mailer/welcome_email.text.erb
@@ -1,9 +1,9 @@
-Welcome to live-togehter.com!, <%= @user.name %>
+Welcome to live-together.com!, <%= @user.name %>
 ===============================================
 
-You have successfully signed up to live-togehter.com!,
+You have successfully signed up to live-together.com!,
 your username is: <%= @user.login %>.
 
 To login to the site, just follow this link: <%= @url %>.
 
-Thanks for joining and have a great !day
+Thanks for joining and have a great day!
