fix application name in views

--- a/app/views/user_mailer/welcome_email.html.erb
+++ b/app/views/user_mailer/welcome_email.html.erb
@@ -4,9 +4,9 @@
     <meta content='text/html; charset=UTF-8' http-equiv='Content-Type' />
   </head>
   <body>
-    <h1>Welcome to live-together.com!, <%= @user.name %></h1>
+    <h1>Welcome to Live-Together.com!, <%= @user.name %></h1>
     <p>
-      You have successfully signed up to live-together.com!,
+      You have successfully signed up to Live-Together.com!,
       your username is: <%= @user.login %>.<br/>
     </p>
     <p>
