--- a/app/views/user_mailer/welcome_email.text.erb
+++ b/app/views/user_mailer/welcome_email.text.erb
@@ -1,7 +1,7 @@
-Welcome to live-together.com!, <%= @user.name %>
+Welcome to Live-Together.com!, <%= @user.name %>
 ===============================================
 
-You have successfully signed up to live-together.com!,
+You have successfully signed up to Live-Together.com!,
 your username is: <%= @user.login %>.
 
 To login to the site, just follow this link: <%= @url %>.
