--- a/app/views/grocery_lists/_form.html.erb
+++ b/app/views/grocery_lists/_form.html.erb
@@ -2,9 +2,9 @@
 
   <% if @grocery_list.errors.any? %>
     <div>
-      <h2><%= pluralize(@grocery_listt.errors.count, 'error') %> prevented the list from being saved.</h2>
+      <h2><%= pluralize(@grocery_list.errors.count, 'error') %> prevented the list from being saved.</h2>
       <ul>
-        <% @grocery_listt.error.full_messages.each do |error_msg| %>
+        <% @grocery_list.error.full_messages.each do |error_msg| %>
           <li><%= error_msg %></li>
         <% end %>
       </ul>
