add link to navbar, add dependent destroy to list and items, add test

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,6 +22,9 @@
           <li>
             <%= link_to "Chores", chores_path %>
           </li>
+          <li>
+            <%= link_to "Grocery Lists", grocery_lists_path %>
+          </li>
         <% end %>
       <% else %>
         <li><%= link_to "Sign up", new_user_registration_path %></li>
