add initial backbone skeleton, and house router with test route

--- a/app/views/houses/show.html.erb
+++ b/app/views/houses/show.html.erb
@@ -11,3 +11,11 @@
     <%= f.submit "Send invitation" %>
   <% end %>
 </div>
+
+<script type="text/javascript">
+  $(document).ready(function(){
+    LiveTogether.initialize();
+    window.router = new LiveTogether.Routers.Houses();
+    Backbone.history.start();
+  });  
+</script>
