--- a/app/views/grocery_items/new.html.erb
+++ b/app/views/grocery_items/new.html.erb
@@ -2,7 +2,7 @@
 
 <%= form_for [@grocery_list, @grocery_item] do |f| %>
   <%= f.text_area :name %>
-  <% f.hidden_field :grocery_list_id, {:value => @grocery_list.id} %>
+  <% f.hidden_field :grocery_list_id %>
   <%= f.submit %>
 <% end %>
 
