create main house model and view, and hook them up to the default backbone route

--- a/app/views/houses/show.html.erb
+++ b/app/views/houses/show.html.erb
@@ -1,15 +1,5 @@
-<div class="large-12 columns">
-  <h1>Welcome to the app!</h1>
-  <p>This is the main house page for: <%= @house.name %> at address: <%= @house.address %></p>
-</div>
-
-<div class="large-12 columns">
-  <h3>Invite roommates to join this house:</h3>
-  <%= form_for @invitation, url: invitations_path, html: {class: 'invitation-form'} do |f| %>
-    <%= f.text_field :email %>
-
-    <%= f.submit "Send invitation" %>
-  <% end %>
+<div id="houseMain">
+  
 </div>
 
 <script type="text/javascript">
@@ -17,5 +7,6 @@
     LiveTogether.initialize();
     window.router = new LiveTogether.Routers.Houses();
     Backbone.history.start();
+    router.navigate("house", {trigger:true});
   });  
 </script>
