add inviting user's email to the invitiation email

--- a/app/views/user_mailer/invitation_email.html.erb
+++ b/app/views/user_mailer/invitation_email.html.erb
@@ -4,7 +4,7 @@
     <meta content='text/html; charset=UTF-8' http-equiv='Content-Type' />
   </head>
   <body>
-    <h2>Your roomate <em>Roomate Name</em> invited you to join the house : <em> <%= @house.name %></em> at Live-Together!</h2>
+    <h2>Your roomate <em><%= @user.email %> </em> invited you to join the house : <em> <%= @house.name %></em> at Live-Together!</h2>
     <p>
       To join the house, just follow this link: <%= @url %>.
     </p>
