--- a/app/views/grocery_lists/show.html.erb
+++ b/app/views/grocery_lists/show.html.erb
@@ -1,15 +1,17 @@
-<h1><%= @grocery_list.name %></h1>
+<h1>Grocery List: <%= @grocery_list.name %></h1>
 
-<h3>items</h3>
+<h3>Items</h3>
 <ul>
 <% @grocery_list.grocery_items.each do |item| %>
-  <li><%= item.name %></li>
+  <li><%= item.name %> | <%= link_to 'Delete', grocery_item_path(item), method: :delete, data: { confirm: 'Are you sure you want to delete?' } %></li>
 <% end %>
 </ul>
 
+<P> Potential Grocery List Items:
 <% if GroceryItem.where(grocery_list_id = @grocery_list_id) %>
   <%= GroceryItem.where(grocery_list_id = @grocery_list_id).pluck(:name).join("\n") %>
-  <% end %>
+<% end %>
+<p>
 
 <p><%= link_to 'Add an item to the list', new_grocery_list_grocery_item_path(@grocery_list) %></p>
 
