--- a/app/assets/templates/lists/show_dashboard.jst.ejs
+++ b/app/assets/templates/lists/show_dashboard.jst.ejs
@@ -1,1 +1,1 @@
-<a backbone href=<%= "/house/lists/"+list.id %>><%= list.name %></a>
+<a backbone href=<%= "/lists/"+list.id %>><%= list.name %></a>
