add backbone collection, model, views, and route to display the completed chores on the dashboard

--- a/app/assets/templates/chores/index.jst.ejs
+++ b/app/assets/templates/chores/index.jst.ejs
@@ -12,3 +12,4 @@
 </table>
 
 <button class="new-chore small button">Add chore</button>
+<a href="/chores/completed" backbone class="small button right">Completed chores</a>
