override completed_chore as_json method to return the json that backbone is expecting, and setup the backbone completed chore views to display correctly

--- a/app/assets/templates/completed_chores/index.jst.ejs
+++ b/app/assets/templates/completed_chores/index.jst.ejs
@@ -2,9 +2,10 @@
 <table style="width: 100%;">
   <thead>
     <tr>
-      <td>Points</td>
       <td>Title</td>
-      <td>Date Completed</td>
+      <td>Points</td>
+      <td>User</td>
+      <td>Completed at</td>
     </tr>
   </thead>
   <tbody>
