--- a/app/assets/templates/completed_chores/show.jst.ejs
+++ b/app/assets/templates/completed_chores/show.jst.ejs
@@ -1,6 +1,5 @@
-<td></td>
-<td></td>
-<td>
-  <%= chore.completed_at %>
-</td>
+<td><%= title %></td>
+<td><%= points %></td>
+<td><%= user %></td>
+<td><%= completed_at %></td>
 
