fix dashboard layout and router so that views properly display when the back button is clicked or the user navigates to the root path

--- a/app/assets/templates/completed_chores/index.jst.ejs
+++ b/app/assets/templates/completed_chores/index.jst.ejs
@@ -12,4 +12,4 @@
   </tbody>
 </table>
 
-<button class="new-chore small button">View chores</button>
+<a backbone href="" class="button small">View chores</a>
