fix nasty bug where event handlers would disappear after a view is rerendered into the DOM

--- a/app/assets/templates/completed_chores/index.jst.ejs
+++ b/app/assets/templates/completed_chores/index.jst.ejs
@@ -12,4 +12,4 @@
   </tbody>
 </table>
 
-<a backbone href="" class="button small">View chores</a>
+<a backbone href="#" class="button small">View chores</a>
