--- a/app/assets/templates/chores/index.jst.ejs
+++ b/app/assets/templates/chores/index.jst.ejs
@@ -12,4 +12,4 @@
 </table>
 
 <button class="new-chore small button">Add chore</button>
-<a href="/chores/completed" backbone class="small button right">Completed chores</a>
+<a href="#chores/completed" class="small button right">Completed chores</a>
