add ability to cancel out of forms, and the form to create a new list item

--- a/app/assets/templates/chores/new.jst.ejs
+++ b/app/assets/templates/chores/new.jst.ejs
@@ -1,13 +1,17 @@
-<input type="text" name="title" placeholder="Title">
-<input type="number" name="points" placeholder="Points">
-<label>Frequency:</label>
-<label for="chore_frequency_1">Daily</label>
-<input id="chore_frequency_1" name="frequency" type="radio" value="1">
-<label for="chore_frequency_7">Weekly</label>
-<input id="chore_frequency_7" name="frequency" type="radio" value="7">
-<label for="chore_frequency_14">Bi-weekly</label>
-<input id="chore_frequency_14" name="frequency" type="radio" value="14">
-<label for="chore_frequency_30">Monthly</label>
-<input id="chore_frequency_30" name="frequency" type="radio" value="30">
+<form>
+  <input type="text" name="title" placeholder="Title">
+  <input type="number" name="points" placeholder="Points">
+  <label>Frequency:</label>
+  <label for="chore_frequency_1">Daily</label>
+  <input id="chore_frequency_1" name="frequency" type="radio" value="1">
+  <label for="chore_frequency_7">Weekly</label>
+  <input id="chore_frequency_7" name="frequency" type="radio" value="7">
+  <label for="chore_frequency_14">Bi-weekly</label>
+  <input id="chore_frequency_14" name="frequency" type="radio" value="14">
+  <label for="chore_frequency_30">Monthly</label>
+  <input id="chore_frequency_30" name="frequency" type="radio" value="30">
 
-<input type="submit" value="Submit">
+  <input type="submit" value="Submit">
+</form>
+
+<button class="small button cancel-form">Cancel</button>
