--- a/app/assets/templates/users/invite.jst.ejs
+++ b/app/assets/templates/users/invite.jst.ejs
@@ -1,3 +1,7 @@
-<input type="text" name="email">
+<form>
+  <input type="text" name="email">
 
-<input type="submit" value="Invite">
+  <input type="submit" value="Invite">
+</form>
+
+<button class="small button cancel-form">Cancel</button>
