flash notice on sign-in or sign-up

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -33,10 +33,13 @@
     </ul>
   </section>
 </nav>
-
-<% if alert || notice %>
-  <div class="notice"><%= notice %></div>
-  <div class="alert"><%= alert %></div>
+<% if ! flash.empty? %>
+  <div alert class="button alert">
+    <% if alert || notice %>
+      <div class="notice"><%= notice %></div>
+      <div class="alert"><%= alert %></div>
+    <% end %>
+  </div>
 <% end %>
 
 <div class="row">
