--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -16,8 +16,10 @@
 
   <div class="large-6 columns">
     <center><h3>Create a new account</h3></center>
+
     <%= form_for(resource, :as => resource_name, :url => registration_path(resource_name)) do |f| %>
-      <%= devise_error_messages! %>
+      <div data-alert class="alert-box alert"><%= devise_error_messages! %></div>
+
 
       <div><%= f.label :email %><br />
       <%= f.email_field :email, :autofocus => true %></div>
