refactor backbone links from anchor tags to buttons that trigger navigation events

--- a/app/assets/templates/chores/index.jst.ejs
+++ b/app/assets/templates/chores/index.jst.ejs
@@ -12,4 +12,4 @@
 </table>
 
 <button class="new-chore small button">Add chore</button>
-<a href="#chores/completed" class="small button right">Completed chores</a>
+<button class="small button right completed-chores">Completed chores</button>
