--- a/app/assets/templates/completed_chores/index.jst.ejs
+++ b/app/assets/templates/completed_chores/index.jst.ejs
@@ -12,4 +12,4 @@
   </tbody>
 </table>
 
-<a backbone href="#" class="button small">View chores</a>
+<button class="button small view-chores">View chores</button>
