--- a/app/assets/templates/lists/show.jst.ejs
+++ b/app/assets/templates/lists/show.jst.ejs
@@ -1,4 +1,4 @@
 <h3><%= list.name %></h3>
 <div id="itemsContainer"></div>
 <button class="small button new-item">Add item</button>
-<a backbone href="#" class="small button right">All lists</a>
+<button class="small button right all-lists">All lists</button>
