--- a/app/assets/templates/chores/new.jst.ejs
+++ b/app/assets/templates/chores/new.jst.ejs
@@ -1,6 +1,6 @@
 <form>
   <input type="text" name="title" placeholder="Title">
-  <input class="click-tag" type="number" name="points" placeholder="Points">
+  <input type="number" name="points" placeholder="Points">
   <label>Frequency:</label>
 
   <input id="chore_frequency_1" name="frequency" type="radio" value="1">
