--- a/app/assets/templates/chores/new.jst.ejs
+++ b/app/assets/templates/chores/new.jst.ejs
@@ -17,7 +17,7 @@
   <label class="click-tag" for="chore_frequency_30">Monthly</label></br>
 
   </br>
-  <input type="submit" value="Submit">
+  <input  class="small button secondary round" type="submit" value="Submit">
 </form>
 
 <button class="small button cancel-form">Cancel</button>
