--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,24 +18,27 @@
     <% if user_signed_in? %>
       <ul class="left">
         <% if current_house %>
-          <li>
+          <li class="nav">
             <%= link_to "Chores", chores_path %>
           </li>
-          <li>
+          <li class="nav">
             <%= link_to "Grocery Lists", grocery_lists_path %>
           </li>
         <% end %>
       </ul>
       <ul class="right">
         <li class="divider"></li>
-        <li><%= link_to current_user.name, root_path %></li>
+        <% if current_user.image? %>
+          <li class="nav"><%= image_tag(current_user.image, :style =>"height:39px") %>
+        <% end %>
+        <li class="nav"><%= link_to current_user.name, root_path %></li>
         <li class="divider"></li>
-        <li><%= link_to "Logout", destroy_user_session_path, method: :delete %></li>
+        <li class="nav"><%= link_to "Logout", destroy_user_session_path, method: :delete %></li>
       </ul>
     <% else %>
       <ul class="right">
         <li class="divider"></li>
-        <li><%= link_to "Sign up", new_user_registration_path %></li>
+        <li class="nav"><%= link_to "Sign up", new_user_registration_path %></li>
       </ul>
     <% end %>
   </section>
