--- a/app/assets/templates/items/new.jst.ejs
+++ b/app/assets/templates/items/new.jst.ejs
@@ -1,7 +1,7 @@
 <form>
-  <input type="text" name="name">
+  <input type="text" name="name" placeholder="Item">
 
-  <input type="submit" value="Create">
+  <input class="small button secondary round" type="submit" value="Create">
 </form>
 
 <button class="small button cancel-form">Cancel</button>
