add flip animation to transition between chores and completed chores

--- a/app/assets/templates/house/layout.jst.ejs
+++ b/app/assets/templates/house/layout.jst.ejs
@@ -1,6 +1,6 @@
 <div id="houseInfo"></div>
-<div class="large-6 columns">
-  <div class="row panel" id="leftPanel"></div>
+<div class="large-6 columns flip-container">
+  <div class="row flipper" id="leftPanel"></div>
 </div>
 <div class="large-5 large-offset-1 columns">
   <div class="row panel" id="rightUpperPanel" style="margin-bottom: 20px;"></div>
