add expenses and settlements to the navbar

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -24,6 +24,12 @@
           <li>
             <%= link_to "Grocery Lists", grocery_lists_path %>
           </li>
+          <li>
+            <%= link_to "Expenses", expenses_path %>
+          </li>
+          <li>
+            <%= link_to "Settlements", payments_path %>
+          </li>
         <% end %>
       </ul>
       <ul class="right">
