expense index shows cents

--- a/app/views/expenses/index.html.erb
+++ b/app/views/expenses/index.html.erb
@@ -25,7 +25,7 @@
         <%= expense.name %>
       </div>
       <div class="large-3 columns">
-        <%= expense.total_cents %>
+        <%= expense.total %>
       </div>
     </div>
   <% end %>
@@ -61,7 +61,7 @@
         <%= debt.expense.name %>
       </div>
       <div class="large-3 columns">
-        <%= debt.amount_cents %>
+        <%= debt.amount %>
       </div>
     </div>
   <% end %>
