update backbone view to display user name and total points

--- a/app/assets/templates/users/index.jst.ejs
+++ b/app/assets/templates/users/index.jst.ejs
@@ -1,3 +1,13 @@
 <h3>Users:</h3>
-<div id="usersContainer"></div>
+<table style="width: 100%;">
+  <thead>
+    <tr>
+      <td>Name</td>
+      <td>Email</td>
+      <td>Points</td>
+    </tr>
+  </thead>
+  <tbody>
+  </tbody>
+</table>
 <button class="small button invite-user">Invite user</button>
