--- a/app/views/payments/new.html.erb
+++ b/app/views/payments/new.html.erb
@@ -29,7 +29,7 @@
   <hr>
   <%= f.label :description %>
   <%= f.text_area :description %>
-  <%= f.label :ammount %>
+  <%= f.label :amount %>
   <%= f.number_field :amount_cents %>
   <%= f.label :method %>
   <%= f.radio_button(:method, "cash") %>
