remove pending tests, and all sad path feature tests

--- a/app/assets/templates/users/invite.jst.ejs
+++ b/app/assets/templates/users/invite.jst.ejs
@@ -1,5 +1,5 @@
 <form>
-  <input type="text" name="email">
+  <input type="text" name="email" placeholder="Roomate email">
 
   <input type="submit" value="Invite">
 </form>
