--- a/app/views/payments/new.html.erb
+++ b/app/views/payments/new.html.erb
@@ -1,45 +1,47 @@
 <h1>New Payment</h1>
-
 <%= form_for @payment do |f| %>
-
-    <% if @payment.errors.any? %>
+  <% if @payment.errors.any? %>
     <div>
       <h2><%= pluralize(@payment.errors.count, 'error') %> prevented the form from being saved..</h2>
       <ul>
-      <% @payment.errors.full_messages.each do |error_msg| %>
-        <li><%= error_msg %></li>
-      <% end %>
+        <% @payment.errors.full_messages.each do |error_msg| %>
+          <li><%= error_msg %></li>
+        <% end %>
       </ul>
-
     </div>
   <% end %>
-
-
   <h3>You are paying :</h3>
-  <div>
-    <% current_house.users.each do |user| %>
-      <% next if user == current_user %>
-      <div class="payment_payees">
-        <%= f.radio_button "lender_id", user.id %>
-        <img src="<%= user.image %>" alt="">
-        <%= user.name %>
+  <div class="row">
+    <div class="large-2 large-offset-3 columns ">
+      <center>
+        <img src="<%= @payment.lender.image %>" alt="">
+        <p><%= @payment.lender.name %></p>
+      </center>
+    </div>
+    <div class="large-3 columns">
+      <%= f.hidden_field :lender_id, :value => @payment.lender.id %>
+      <%= f.label :description %>
+      <%= f.text_area :description %>
+      <%= f.label :amount %>
+      <div class="row collapse">
+        <div class="small-3 large-2 columns">
+          <span class="prefix"><strong> $ </strong></span>
+        </div>
+        <div class="small-9 large-10 columns">
+          <%= f.number_field :amount , :default => @payment.amount_cents , :step => 'any'%>
+        </div>
       </div>
-    <% end %>
+      <%= f.label :date %>
+      <%= f.date_field :date, :value => "2012-09-03" %>
+      <%= f.label :method %>
+      <%= f.radio_button :method, "cash", :checked => 'checked' %>
+      <%= "Cash" %>
+      <%= f.radio_button :method, "deposit" %>
+      <%= "Deposit" %>
+      <%= f.submit "Submit", class: "button success" %>
+    </div>
+    <div class="large-3 columns">
+    </div>
   </div>
-  <hr>
-  <%= f.label :description %>
-  <%= f.text_area :description %>
-  <%= f.label :amount %>
-  <%= f.number_field :amount_cents %>
-  <%= f.label :method %>
-  <%= f.radio_button(:method, "cash") %>
-  <%= "Cash" %>
-  <%= f.radio_button(:method, "deposit") %>
-  <%= "Deposit" %>
-  <%= f.label :date %>
-  <%= f.date_field :date %>
-
-  <%= f.submit "Submit", class: "button success" %>
-
 <% end %>
 <hr>
