--- a/app/views/expenses/new.html.erb
+++ b/app/views/expenses/new.html.erb
@@ -6,8 +6,8 @@
   <%= f.text_field :name %>
   <%= f.label :description %>
   <%= f.text_field :description %>
-  <%= f.label :total_cents %>
-  <%= f.number_field :total_cents %>
+  <%= f.label :total %>
+  <%= f.number_field :total, :step => '0.01' %>
   <%= f.label :purchased_on %>
   <%= f.date_field :purchased_on %>
   <br>
