--- a/app/views/payments/_form.html.erb
+++ b/app/views/payments/_form.html.erb
@@ -10,7 +10,7 @@
 
   <%= f.label :description %>
   <%= f.text_field :description %>
-  <%= f.label :ammount %>
+  <%= f.label :amount %>
   <%= f.number_field :amount_cents %>
   <%= f.label :method %>
   <%= radio_button_tag(:method, "cash") %>
