change top nav styling and fix facebook image bug

--- a/app/assets/stylesheets/foundation_and_overrides.scss
+++ b/app/assets/stylesheets/foundation_and_overrides.scss
@@ -968,10 +968,11 @@
 //
 
 // Background color for the top bar
-// $topbar-bg: #111;
+$topbar-bg: #172CAF;
 
 // Height and margin
-// $topbar-height: 45px;
+$topbar-height: 52px;
+$topbar-line-height: 1 em;
 // $topbar-margin-bottom: emCalc(30px);
 
 // Control Input height for top bar
