--- a/app/assets/templates/house/dashboard.jst.ejs
+++ b/app/assets/templates/house/dashboard.jst.ejs
@@ -1,1 +1,2 @@
-<h3><%= house.name %> | <%= house.address %></h3>
+<h2 style="margin: 10px 0 0 0; text-align:center"><%= house.name %> <small><%= house.address %></h3>
+<hr style="margin: 7px 0">
