update colors of buttons and top nav

--- a/app/assets/stylesheets/dashboard.css.erb
+++ b/app/assets/stylesheets/dashboard.css.erb
@@ -11,3 +11,7 @@ html, body {
 body {
   background-image: url(<%= asset_path 'mooning.png' %>);
 }
+
+.top-bar-section li a:not(.button):hover {
+  background-color: #707ED7;
+}
